# TP_CI_Heap

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  telegram_notification.sh
Binomial_Heap/: Binomial_Heap.h  CMakeLists.txt  TestBinomial_Heap.cpp
Fibonachi_Heap/: CMakeLists.txt  Fibonachi_Heap.h  TestFibonachi_Heap.cpp
Heap/: CMakeLists.txt  Heap.h  TestHeap.cpp
Random/: Random.h
Simple_Heap/: CMakeLists.txt  Simple_Heap.h  TestSimple_Heap.cpp
TestAll/: CMakeLists.txt  TestAll.cpp
Vector/: CMakeLists.txt  TestVector.cpp  Vector.h
